kylin-music (1.1.0-37) v101; urgency=medium

  * BUG号：
  - 103011, ctrl+Q无法关闭音乐程序

 -- yushuoqi <yushuoqi@kylinos.cn>  Thu, 24 Feb 2022 16:45:04 +0800

kylin-music (1.1.0-36) v101; urgency=medium

  * 其他改动说明：
  - 取消control文件依赖： Breaks: taglib,

 -- yushuoqi <yushuoqi@kylinos.cn>  Thu, 17 Feb 2022 17:28:45 +0800

kylin-music (1.1.0-35) v101; urgency=medium

  * BUG号：
   - 103646, 播放音乐进入S4，显示器黑屏后声音会继续播放1-2S

  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- yushuoqi <yushuoqi@kylinos.cn>  Thu, 10 Feb 2022 11:24:23 +0800

kylin-music (1.1.0-34) v101; urgency=medium

  * BUG号：
   - 89148 【内测】【声音】插3.5mm耳机的情况下；播放音乐；拔掉耳机“音乐”不暂停.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Tue, 21 Dec 2021 15:37:24 +0800

kylin-music (1.1.0-33) v101; urgency=medium

  * BUG号：
   - 83171 【音乐】【概率性】右键正在播放中的音乐“从歌单中删除”应用闪退且产生core文件，概率1/100.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Thu, 02 Dec 2021 16:47:47 +0800

kylin-music (1.1.0-32) v101; urgency=medium

  * BUG号：无.
  * 任务号：61040 【SP2】各组件藏文翻译导入----kylin-music.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Fri, 19 Nov 2021 17:35:27 +0800

kylin-music (1.1.0-31) v101; urgency=medium

  * BUG号：
   - 82817【音乐】【PTOF】添加音乐后，搜索框使用搜狗拼音只能一次性输入中文，第二次继续输入则为英文字符
   - 82831【音乐】深色主题，使用键盘“下键”选择搜索到的歌曲，被选中的歌曲名部分被隐藏
   - 82841【音乐】【概率性】无法使用键盘“下键”选择搜索到的歌曲，概率10/15.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Mon, 11 Oct 2021 19:05:14 +0800

kylin-music (1.1.0-30) v101; urgency=medium

  * BUG号：
   - 81074【音乐】歌单中歌曲播放时删除该歌单后歌曲还能正常播放
   - 82850【音乐】切换主题之前播放过的音乐列表行字体颜色未适应主题.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Mon, 11 Oct 2021 09:38:49 +0800

kylin-music (1.1.0-29) v101; urgency=medium

  * BUG号：
   - 80989【卓怡】【声音】音乐播放器播放音频声音小.
  * 需求号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Mon, 27 Sep 2021 19:12:56 +0800

kylin-music (1.1.0-28) v101; urgency=medium

  * BUG号：